# ft_ls

./: CMakeLists.txt  Makefile  README.md  a.out  ft_ls  ft_ls.h  test.c
includes/: ft_ls.h
sources/: main.c
sources/free/: free.c
sources/log/: ls_log.c
sources/miscellaneous/: ft_strchr_index.c  get_fpath.c  get_integer_length.c  get_max_name.c  sorting.c
sources/parsing/: parsing_directory.c  parsing_entry.c  parsing_input.c  parsing_options.c
sources/put/: get_grid.c  put.c  put_basic_list.c  put_detailed_list.c  put_input_name.c  put_list.c
sources/put/detailed_item/: put_blocks.c  put_fname.c  put_group_name.c  put_link.c  put_protection.c  put_size.c  put_time.c  put_user_name.c
tt/: a.out  main.c  reading_directories.c  sorting.c
tt/popa/hm/: a.out  test.c  test.h
